@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_metric_slurm_state.c,v 1.19.2.1 2006-11-12 07:48:47 chu11 Exp $
+ *  $Id: cerebro_metric_slurm_state.c,v 1.19.2.2 2006-11-13 02:27:49 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -337,6 +337,7 @@ struct cerebro_metric_module_info metric_module_info =
     &common_metric_cleanup_do_nothing,
     &slurm_state_metric_get_metric_name,
     &common_metric_get_metric_period_60,
+    &common_metric_get_metric_flags_none,
     &slurm_state_metric_get_metric_value,
     &common_metric_destroy_metric_value_do_nothing,
     &slurm_state_metric_get_metric_thread,
